

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";


package com.alibaba.oneagent.api;


message StringKey {
    string key = 1;
}

message StringValue {
    string value = 1;
}

message Properties {
    map<string, string> properties = 1;
}

message Envs {
    map<string, string> env = 1;
}

service SystemProperty {
    rpc get(google.protobuf.Empty) returns (Properties);
    rpc getByKey(StringKey) returns (StringValue);
    rpc update(Properties) returns (Properties);
}

service SystemEnv {
    rpc get(google.protobuf.Empty) returns (Envs);
    rpc getByKey(StringKey) returns (StringValue);
}